--- a/index.html
+++ b/index.html
@@ -10,6 +10,40 @@
 </head>
 <body>
 
+<section>
+  <div>
+    <h1>Send us a sweet little note</h1>
+
+    <form>
+      <div>
+        <label for="name">Name</label>
+        <input id="name" required>
+      </div>
+
+      <div>
+        <label for="email">Your email</label>
+        <input id="email" type="email" placeholder>
+      </div>
+
+      <div>
+        <label for="subject">Your email</label>
+        <select id="subject">
+          <option>Get a quote!</option>
+          <option>General question</option>
+          <option>Just to talk</option>
+        </select>
+      </div>
+
+      <div>
+        <label for="details">What's up?</label>
+        <textarea id="details" required></textarea>
+      </div>
+      <div>
+        <button type="submit">Send message></button>
+      </div>
+    </form>
+  </div>
+</section>
 
 
 </body>
